Setting up dependencies to common project.

--- a/tools/taxaimporter/build.gradle
+++ b/tools/taxaimporter/build.gradle
@@ -5,3 +5,7 @@ plugins {
 application {
     mainClassName = 'com.rarosu.simpleobservation.taxaimporter.Main'
 }
+
+dependencies {
+    implementation project(':common')
+}
