--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ android {
 }
 
 dependencies {
+    implementation project(':common')
+    
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
