--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,3 +6,11 @@ java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
 }
+
+repositories {
+    jcenter()
+}
+
+dependencies {
+    implementation 'org.hibernate:hibernate-core:5.4.0.Final'
+}
