--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "org.flywaydb.flyway" version "6.4.2"
 }
 
 java {
@@ -13,4 +14,11 @@ repositories {
 
 dependencies {
     implementation 'org.hibernate:hibernate-core:5.4.0.Final'
+    implementation 'org.postgresql:postgresql:42.2.11'
+}
+
+flyway {
+    url = 'jdbc:postgresql://localhost/simpleobservation'
+    user = 'simpleobsadmin'
+    password = 'password'
 }
