--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'java-library'
     id "org.flywaydb.flyway" version "6.4.2"
 }
 
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.hibernate:hibernate-core:5.4.0.Final'
+    api 'org.hibernate:hibernate-core:5.4.0.Final'
     implementation 'org.postgresql:postgresql:42.2.11'
 }
 
