--- a/tools/taxaimporter/build.gradle
+++ b/tools/taxaimporter/build.gradle
@@ -8,4 +8,7 @@ application {
 
 dependencies {
     implementation project(':common')
+    
+    implementation 'org.apache.poi:poi:4.1.2'
+    implementation 'org.apache.poi:poi-ooxml:4.1.2'
 }
